<resources>
    <string name="app_name">Submission Fakhri Rasyad</string>
    <string name="txt_image_desc">Gambar Detail</string>
    <string name="txt_breed_name">Cat Breed Name Here</string>
    <string name="detail_desc">Short desc here</string>
    <string name="detail_size">Size</string>
    <string name="detail_size_description">Size Description</string>
    <string name="detail_weight">Weight</string>
    <string name="detail_weight_desc">Bagian mengenai rata-rata berat kucing</string>
    <string name="detail_coat">Coat</string>
    <string name="detail_coat_desc">Deskripsi coat kucing</string>
    <string name="detail_color">Color</string>
    <string name="detail_color_desc">Deskripsi warna bulu kucing</string>
    <string-array name="cat_breed_size">
        <item>Small to medium</item>
        <item>Medium to Large</item>
        <item>Small to Medium</item>
        <item>Medium to large</item>
        <item>Medium to Large</item>
        <item>Medium</item>
        <item>Medium to large</item>
        <item>Medium to Large</item>
        <item>Medium</item>
        <item>Medium to large</item>
        <item>Medium</item>
        <item>Medium to large</item>
    </string-array>
    <string-array name="cat_breed_coat">
        <item>Medium</item>
        <item>Short, Medium, Long</item>
        <item>Short, Semi-long</item>
        <item>Short</item>
        <item>Medium</item>
        <item>Medium</item>
        <item>Medium</item>
        <item>Medium to Long</item>
        <item>Short</item>
        <item>Short, plush, dense</item>
        <item>Short</item>
        <item>Medium</item>
    </string-array>
    <string-array name="cat_breed_weight">
        <item>Male: 7 to 10 pounds, Female: 6 to 8 pounds</item>
        <item>Male: 12 to 16 pounds, Female: 7 to 11 pounds</item>
        <item>Male: 7 to 10 pounds, Female: 5 to 8 pounds</item>
        <item>Male: 11 to 15 pounds, Female: 8 to 12 pounds</item>
        <item>Male: 12 to 15 pounds, Female: 8 to 12 pounds</item>
        <item>Male: 12 to 16 pounds, Female: 8 to 12 pounds</item>
        <item>Male: 10 to 18 pounds, Female: 6 to 12 pounds</item>
        <item>Male: 9 to 15 pounds, Female: 6 to 10 pounds</item>
        <item>Male: 8 to 11 pounds, Female: 6 to 9 pounds</item>
        <item>Male: 12 to 18 pounds, Female: 9 to 15 pounds</item>
        <item>Males: 8 to 12 pounds, Female: 6 to 10 pounds</item>
        <item>Males: 10 to 15 pounds, Female: 6 to 11 pounds</item>
    </string-array>
    <string-array name="cat_breed_color">
        <item>Ruddy, red, blue, fawn</item>
        <item>White, black, blue, red, cream, chocolate, lavender, cinnamon, fawn, plus various patterns and shadings</item>
        <item>White, black, blue, red, cream, chocolate, lilac, silver, golden, plus various patterns and shadings</item>
        <item>White, black, blue, red, cream and silver, plus various patterns and shadings</item>
        <item>Average, considered moderately talkative and an enthusiastic purrer</item>
        <item>Balinese - seal point, chocolate point, blue point and lilac point, plus various patterns and shadings; Javanese – red point, cream point and seal point, plus various patterns and shadings</item>
        <item>Bright orange to light brown, with dark spots or a distinctive marbling pattern</item>
        <item>Seal point, blue point, chocolate point, lilac point</item>
        <item>Black</item>
        <item>Blue, white, black, red, cream, smoke, silver and golden, plus a variety of patterns and shadings</item>
        <item>Sable, champagne, blue, platinum</item>
        <item>Any shade of blue, from ash to slate</item>
    </string-array>
    <string-array name="cat_breed_name">
        <item>Abyssinian</item>
        <item>American Bobtail</item>
        <item>American Curl</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Balinese-Javanese</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>Bombay</item>
        <item>British Shorthair</item>
        <item>Burmese</item>
        <item>Chartreux</item>
    </string-array>
    <string-array name="cat_breed_desc">
        <item>Abyssinians are highly intelligent and intensely inquisitive. They love to investigate and will leave no nook or cranny unexplored. They’re sometimes referred to as “Aby-grabbys” because they tend to take things that grab their interest. The playful Aby loves to jump and climb. Keep a variety of toys on hand to keep her occupied, including puzzle toys that challenge her intelligence.</item>
        <item>The American Bobtail is an athletic breed that looks like a bobtailed wildcat and has many dog-like tendencies.</item>
        <item>With unique ears that curl back, and an inquisitive expression reminiscent of happy surprise, the American Curl brings a smile to everyone who meets her.</item>
        <item>Formerly used to keep rodents and vermin away from food stores, the American Shorthair still enjoys exercising her hunting skills on unsuspecting insects. As a smart, moderately active feline, she enjoys learning tricks and challenging her intelligence with puzzles and interactive toys.</item>
        <item>Intelligent and highly adaptable, the American Wirehair is an American original, with a completely unique wired coat.</item>
        <item>The Balinese, also known as Javanese depending on coat color and pattern, is regal and aristocratic in appearance, but a curious kitten at heart.</item>
        <item>Bengal Cats are curious and confident with the tameness of a domestic tabby and the beauty of an Asian Leopard Cat. Learn more about Bengals and their playful personality, plus information on their health and how to feed them.</item>
        <item>The Birman is a cat of distinction as well as legend. With their exotic ancestry, luxurious pointed coats, “white gloved” paws and mesmerizing blue eyes, this is a breed with undeniable charisma.</item>
        <item>The Bombay is an easy-going, yet energetic cat. She does well in quiet apartments where she’s the center of attention as well as in lively homes with children and other pets. She’ll talk to you in a distinct voice, and you’re likely to find her in the warmest spot in your home, whether that’s in the sunlight from a window or curled up under the covers in bed with you.</item>
        <item>The British Shorthair is an easygoing feline. She enjoys affection but isn’t needy and dislikes being carried. She’ll follow you from room to room, though, out of curiosity. British Shorthairs aren’t lap cats, but they do enjoy snuggling next to their people on the couch.</item>
        <item>The Burmese thrives on companionship with her humans and other cats. Like her Siamese ancestors, she enjoys conversation, but has a much softer, sweeter voice.</item>
        <item>Often called the smiling cat of France, the Chartreux has a sweet, smiling expression. This sturdy, powerful cat has a distinctive blue coat with a resilient wooly undercoat. Historically known as fine mousers with strong hunting instincts, the Chartreux enjoys toys that move. This is a slow-maturing breed that reaches adulthood in three to five years. A loving, gentle companion, the Chartreux forms a close bond with her family.</item>
    </string-array>
    <integer-array name="cat_breed_photo">
        <item>@drawable/abyssinian_body_7</item>
        <item>@drawable/americanbobtail_body_6</item>
        <item>@drawable/americancurlsha_body_6</item>
        <item>@drawable/americanshorthair_body_6</item>
        <item>@drawable/americanwirehair_body_6</item>
        <item>@drawable/javanese_body_6</item>
        <item>@drawable/bengal_body_6</item>
        <item>@drawable/birman_body_6</item>
        <item>@drawable/bombay_body_6</item>
        <item>@drawable/britishshorthair_body_6</item>
        <item>@drawable/burmese_body_6</item>
        <item>@drawable/chartruese_body_6</item>
    </integer-array>
</resources>